# noSqlite

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  project.md
apps/cli/: main  main.c
src/core/memory/: buffer_error.h  buffer_pool.c  buffer_pool.h  frame_metadata.h  page_table.c
src/core/memory/buffer_pool/: buffer_pool.c  buffer_pool.h
src/core/memory/interfaces/: IBufferPoolManager.h
src/core/memory/lru_node/: lru_node.c  lru_node.h
src/core/memory/page_table/: page_table.h
src/core/memory/services/: BufferPoolManager.cpp
src/core/memory/types/: BufferError.h  FrameMetadata.h
src/core/storage/: page.h  page_header.h  page_manager.c  page_manager.h
src/core/storage/interfaces/: PageManager.h
src/core/storage/services/: PageManager.cpp
src/core/storage/types/: Page.h  PageHeader.h
src/errors/: StorageError.h  storage_error.h
tests/memory/page_table/: page_table_test.c
